# offseason_greenlobby

./: Makefile  README.md  idea2amendement.py  pyproject.toml  requirements.txt
data/processed/: amendements.csv  distorsions.csv  labeled_ds.csv  labeled_idees.csv  labeled_idees_1.csv  labeled_olivier.csv  lb_dataset.csv  rest_dataset.csv
data/prompts/: prompts.json  prompts_py.py
data/raw/DLR5L16N49726/PRJLANR5L16B2436/: AMANR5L16PO419604B2436P0D1N000001.json  (+4657 more)
data/results/eval/: evaluations.csv
data/results/predictions/: gpt35turbo_prompt_test.csv  gpt4turbo_prompt_test.csv  mistral_predictions.csv  openai_predictions.csv
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: duplomb.ipynb  explore_datasets.ipynb  explore_results.ipynb  idea2amendement.py  nb.ipynb  results_edl.ipynb  test_mistral.ipynb  test_openai.ipynb
notebooks/AGEC/: AGEC_EDL.ipynb  detection_lobbys.ipynb
notebooks/LOA/: LOA_EDL.ipynb  detection_lobbys.ipynb  loa_embeddings.ipynb  loa_embeddings_copy.ipynb  new_resultats_LOA_methode_vectorization.html  résultat_LOA_methode_vectorization.html
notebooks/LOI_VERTE/: LOI_VERTE_EDL.ipynb  detection_lobbys.ipynb
offseason_greenlobby/: __init__.py  config.py  dataset.py  extract_amendement.py  extract_amendement_an.py  features.py  idea2amendement.py  plots.py  run_classification.py  run_eval_script.py  searchForEDL.py
offseason_greenlobby/evaluation/: metrics.py
offseason_greenlobby/modeling/: base.py  embedding.py  mistral.py  open_ai.py  predict.py  train.py
offseason_greenlobby/utils/: data_loader.py  get_entities.py  utils.py
(+5415 files in other folders)
