[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "offseason_greenlobby"
version = "0.0.1"
description = "Recherche d'\u00e9l\u00e9ments de language dans les amendements sur les projets de lois"
authors = [
  { name = "Basile R" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["offseason_greenlobby"]
include = ["pyproject.toml", "offseason_greenlobby/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["offseason_greenlobby"]
force-sort-within-sections = true

